log
Fri, May 16, 2025  2:36:16 AM: 
 sudoku.c | 84 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 84 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c:56:8: error: "/*" within comment [-Werror=comment]
        /*
         
sudoku.c: In function 'get_adj_nodes':
sudoku.c:82:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
In file included from test.c:5:0:
sudoku.c: At top level:
sudoku.c:102:5: error: redefinition of 'is_valid'
 int is_valid(Node* n){
     ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: previous definition of 'is_valid' was here
 int is_valid(Node* n){
     ^~~~~~~~
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:107:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k;
             ^
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  2:36:47 AM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c:56:8: error: "/*" within comment [-Werror=comment]
        /*
         
sudoku.c: In function 'get_adj_nodes':
sudoku.c:82:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
In file included from test.c:5:0:
sudoku.c: At top level:
sudoku.c:102:5: error: redefinition of 'is_valid'
 int is_valid(Node* n){
     ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: previous definition of 'is_valid' was here
 int is_valid(Node* n){
     ^~~~~~~~
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:107:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k;
             ^
cc1.exe: all warnings being treated as errors
7c40397
Fri, May 16, 2025  2:39:31 AM: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c:56:7: error: "/*" within comment [-Werror=comment]
       /*
        
In file included from test.c:5:0:
sudoku.c:122:5: error: redefinition of 'is_valid'
 int is_valid(Node* n){
     ^~~~~~~~
In file included from test.c:5:0:
sudoku.c:46:5: note: previous definition of 'is_valid' was here
 int is_valid(Node* n){
     ^~~~~~~~
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:127:13: error: unused variable 'k' [-Werror=unused-variable]
     int i,j,k;
             ^
cc1.exe: all warnings being treated as errors
227bc54
Fri, May 16, 2025  2:42:04 AM: 
 sudoku.c | 105 +++++++++++++++++++++++++++++++--------------------------------
 1 file changed, 51 insertions(+), 54 deletions(-)
 tests:  0|5
total_score: 0/70
02c09fa
Fri, May 16, 2025  2:43:12 AM: 
 sudoku.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
240228e
Fri, May 16, 2025  2:43:49 AM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
5317e59
Fri, May 16, 2025  2:44:42 AM: 
 sudoku.c | 45 +++++++++++++--------------------------------
 1 file changed, 13 insertions(+), 32 deletions(-)
 tests:  5|3
total_score: 35/70
1895131
Fri, May 16, 2025  2:47:17 AM: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
d9e7194
Fri, May 16, 2025  2:50:15 AM: 
 sudoku.c | 61 ++++++++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 46 insertions(+), 15 deletions(-)
 tests:  6|2
total_score: 45/70
c8b48a5
Fri, May 16, 2025  2:52:10 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
69fbe0a
